Fix sidenav collapsed on mobile

--- a/src/components/navigation/side-nav.module.css
+++ b/src/components/navigation/side-nav.module.css
@@ -11,10 +11,6 @@
   z-index: 100;
 }
 
-.sidebarCollapsed {
-  width: 64px;
-}
-
 .sidebarContent {
   display: flex;
   flex-direction: column;
